--- a/a3_groupf_cleaning_Modeling and Analysis.ipynb
+++ b/a3_groupf_cleaning_Modeling and Analysis.ipynb
@@ -2541,18 +2541,21 @@
         "y_pred_baseline = [majority_class] * len(y_test)\n",
         "\n",
         "print(\"\\nBaseline accuracy:\", accuracy_score(y_test, y_pred_baseline))\n",
-        "print(\"\\nBaseline classification report:\\n\",\n",
-        "      classification_report(y_test, y_pred_baseline))\n"
+        "print(\n",
+        "    \"\\nBaseline classification report:\\n\",\n",
+        "    classification_report(y_test, y_pred_baseline, zero_division=0)\n",
+        ")\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4I_CEj9UtoAL",
-        "outputId": "8d91284a-6e71-42c7-f050-073a8613869c"
+        "outputId": "433c16e5-b040-41b5-d853-1d677894fe05"
       },
       "id": "4I_CEj9UtoAL",
-      "execution_count": 23,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -2572,18 +2575,6 @@
             "   macro avg       0.45      0.50      0.47      7304\n",
             "weighted avg       0.80      0.89      0.84      7304\n",
             "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
           ]
         }
       ]
